--- a/index.html
+++ b/index.html
@@ -13,17 +13,39 @@
 <body>
     <div>
         <button id='timeButton'>GET</button>
-        <p id='zeroCycleTime'></p>
-        <p id='firstCycleTime'></p>
-        <p id='secondCycleTime'></p>
-        <p id='thirdCycleTime'></p>
-        <p id='fourthCycleTime'></p>
-        <p id='fifthCycleTime'></p>
-        <p id='sixthCycleTime'></p>
+        <div>
+            <p>1</p>
+            <p id='firstCycleTime'></p>
+            <p>1.5 H</p>
+        </div>
+        <div>
+            <p>2</p>
+            <p id='secondCycleTime'></p>
+            <p>3.0 H</p>
+        </div>
+        <div>
+            <p>3</p>
+            <p id='thirdCycleTime'></p>
+            <p>4.5 H</p>
+        </div>
+        <div>
+            <p>4</p>
+            <p id='fourthCycleTime'></p>
+            <p>6.0 H</p>
+        </div>
+        <div>
+            <p>5</p>
+            <p id='fifthCycleTime'></p>
+            <p>7.5 H</p>
+        </div>
+        <div>
+            <p>6</p>
+            <p id='sixthCycleTime'></p>
+            <p>9.0 H</p>
+        </div>
     </div>
 </body>
 
 <script src='scripts.js'></script>
-
 
 </html>
