--- a/index.html
+++ b/index.html
@@ -11,38 +11,38 @@
 </head>
 
 <body>
-    <div>
+    <div class='whole-block'>
+        <div class='hour-block hour-block-1'>
+            <p class='cycle-info'>1</p>
+            <p class='cycle-time' id='firstCycleTime'></p>
+            <p class='cycle-info'>1.5 H</p>
+        </div>
+        <div class='hour-block hour-block-2'>
+            <p class='cycle-info'>2</p>
+            <p class='cycle-time' id='secondCycleTime'></p>
+            <p class='cycle-info'>3.0 H</p>
+        </div>
+        <div class='hour-block hour-block-3'>
+            <p class='cycle-info'>3</p>
+            <p class='cycle-time' id='thirdCycleTime'></p>
+            <p class='cycle-info'>4.5 H</p>
+        </div>
+        <div class='hour-block hour-block-4'>
+            <p class='cycle-info'>4</p>
+            <p class='cycle-time' id='fourthCycleTime'></p>
+            <p class='cycle-info'>6.0 H</p>
+        </div>
+        <div class='hour-block hour-block-5'>
+            <p class='cycle-info'>5</p>
+            <p class='cycle-time' id='fifthCycleTime'></p>
+            <p class='cycle-info'>7.5 H</p>
+        </div>
+        <div class='hour-block hour-block-6'>
+            <p class='cycle-info'>6</p>
+            <p class='cycle-time' id='sixthCycleTime'></p>
+            <p class='cycle-info'>9.0 H</p>
+        </div>
         <button id='timeButton'>GET</button>
-        <div>
-            <p>1</p>
-            <p id='firstCycleTime'></p>
-            <p>1.5 H</p>
-        </div>
-        <div>
-            <p>2</p>
-            <p id='secondCycleTime'></p>
-            <p>3.0 H</p>
-        </div>
-        <div>
-            <p>3</p>
-            <p id='thirdCycleTime'></p>
-            <p>4.5 H</p>
-        </div>
-        <div>
-            <p>4</p>
-            <p id='fourthCycleTime'></p>
-            <p>6.0 H</p>
-        </div>
-        <div>
-            <p>5</p>
-            <p id='fifthCycleTime'></p>
-            <p>7.5 H</p>
-        </div>
-        <div>
-            <p>6</p>
-            <p id='sixthCycleTime'></p>
-            <p>9.0 H</p>
-        </div>
     </div>
 </body>
 
