--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p class='cycle-time' id='sixthCycleTime'></p>
             <p class='cycle-info'>9.0 H</p>
         </div>
-        <button id='timeButton'>Z Z Z</button>
+        <button id='timeButton'>PRESS HERE TO GET YOUR SLEEP CYCLES</button>
     </div>
 </body>
 
