Button removal and JS wrap fix.
sleepcyclr now shows results on page load; previous JS presented problems due to independent getHours() and getMinutes(), which wouldn't "wrap" time correctly.

--- a/index.html
+++ b/index.html
@@ -14,35 +14,34 @@
     <div class='whole-block'>
         <div class='hour-block hour-block-1'>
             <p class='cycle-info'>1</p>
-            <p class='cycle-time' id='firstCycleTime'></p>
-            <p class='cycle-info'>1.5 H</p>
+            <p class='cycle-time' id='CycleTime1'></p>
+            <p class='cycle-info'>01H30</p>
         </div>
         <div class='hour-block hour-block-2'>
             <p class='cycle-info'>2</p>
-            <p class='cycle-time' id='secondCycleTime'></p>
-            <p class='cycle-info'>3.0 H</p>
+            <p class='cycle-time' id='CycleTime2'></p>
+            <p class='cycle-info'>03H00</p>
         </div>
         <div class='hour-block hour-block-3'>
             <p class='cycle-info'>3</p>
-            <p class='cycle-time' id='thirdCycleTime'></p>
-            <p class='cycle-info'>4.5 H</p>
+            <p class='cycle-time' id='CycleTime3'></p>
+            <p class='cycle-info'>04H30</p>
         </div>
         <div class='hour-block hour-block-4'>
             <p class='cycle-info'>4</p>
-            <p class='cycle-time' id='fourthCycleTime'></p>
-            <p class='cycle-info'>6.0 H</p>
+            <p class='cycle-time' id='CycleTime4'></p>
+            <p class='cycle-info'>06H00</p>
         </div>
         <div class='hour-block hour-block-5'>
             <p class='cycle-info'>5</p>
-            <p class='cycle-time' id='fifthCycleTime'></p>
-            <p class='cycle-info'>7.5 H</p>
+            <p class='cycle-time' id='CycleTime5'></p>
+            <p class='cycle-info'>07H30</p>
         </div>
         <div class='hour-block hour-block-6'>
             <p class='cycle-info'>6</p>
-            <p class='cycle-time' id='sixthCycleTime'></p>
-            <p class='cycle-info'>9.0 H</p>
+            <p class='cycle-time' id='CycleTime6'></p>
+            <p class='cycle-info'>09H00</p>
         </div>
-        <button id='timeButton'>PRESS HERE TO GET YOUR SLEEP CYCLES</button>
     </div>
 </body>
 
