--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>sleepcyclr</title>
     <link rel='stylesheet' href='style.css'>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+    <link rel='icon' type='image/x-icon' href='favicon.ico' />
 </head>
 
 <body>
